# warrios

./: README.md
Backend/: alembic.ini  pyproject.toml
Backend/alembic/: env.py
Backend/alembic/versions/: 4c8deec940b9_initial.py  751eb6a1bad1_actualiza_la_tabla_player_y_crea_tabla_.py
Backend/core/: config.py  database.py
Backend/models/: models.py
Backend/src/: main.py
Backend/src/breed/adapters/: router.py
Backend/src/breed/application/: service.py
Backend/src/breed/domain/: port.py
Backend/src/breed/infrastructure/: breed_schema.py  repository.py
Backend/src/games/adapters/: router.py
Backend/src/games/application/: service.py
Backend/src/games/domain/: port.py
Backend/src/games/infrastructure/: game_schema.py  repository.py
Backend/src/loobys/adapters/: router.py
Backend/src/loobys/application/: service.py
Backend/src/loobys/domain/: port.py
Backend/src/loobys/infrastructure/: looby_schema.py  repository.py
Backend/src/player/adapters/: router.py
Backend/src/player/application/: service.py
Backend/src/player/domain/: port.py
Backend/src/player/infrastructure/: player_schema.py  repository.py
Backend/src/power/adapters/: router.py
Backend/src/power/application/: command.py  service.py
Backend/src/power/infrastructure/: power_schema.py  repository.py
Backend/src/relations/adapters/: router.py
Backend/src/relations/application/: services.py
Backend/src/relations/infrastructure/: repository.py
Backend/src/type_warrior/adapters/: router.py
Backend/src/type_warrior/application/: command.py  service.py
(+78 files in other folders)
